src/test/resources/testcases/valid/control/while_loop.tc
// EXPECT_RETURN: 10
// Test while loop
int main() {
    int sum = 0;
    int i = 0;
    while (i < 5) {
        sum = sum + i;
        i = i + 1;
    }
    return sum; // 0+1+2+3+4 = 10
}
