src/test/resources/testcases/invalid/types/void_cond_while.tc
void foo() {
    return;
}
int main() {
    while (foo()) { // Error: conditional expression cannot be void
        return 1;
    }
    return 0;
}
